# kNN

./: .gitmodules  CMakeLists.txt  README.md  cub_impl.cu  cub_impl.h  distance.cu  distance.h  kNN.cpp  mgpu_impl.cu  mgpu_impl.h
kNN/: kNN.h  kNN_impl.cu  kNN_impl.h
tests/: knn_test.cpp  unit_tests.cpp
